--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<img src="https://images.unsplash.com/photo-1614027164847-1b28cfe1df60?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGlvbnxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60" alt="Lion image">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
